--- a/app/src/main/res/menu/main_page_drawer.xml
+++ b/app/src/main/res/menu/main_page_drawer.xml
@@ -4,6 +4,12 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_SignOut"
+        android:orderInCategory="100"
+        android:title="Sign Out"
+        app:showAsAction="never" />
+
 </menu>
